--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,20 @@
 services:
-  app:
+  php:
     build:
       context: .
       dockerfile: ./docker/php/Dockerfile
+    # uncomment the following line if you want to run this in a production environment
+    # restart: always
+    ports:
+      - "80:80" # HTTP
+      - "443:443" # HTTPS
+      - "443:443/udp" # HTTP/3
     volumes:
-      - .:/var/www/html
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`guest-book.test`)"
-      - "traefik.http.services.app.loadbalancer.server.port=80"
-    networks:
-      - traefik_network
-    environment:
-      - APP_ENV=development
-      - DB_HOST=mysql
-      - DB_DATABASE=guestbook_db
-      - DB_USERNAME=guestbook
-      - DB_PASSWORD=12345
+      - ./:/app/
+      - caddy_data:/data
+      - caddy_config:/config
+    # comment the following line in production, it allows to have nice human-readable logs in dev
+    tty: true
     depends_on:
       - mysql
 
@@ -32,12 +30,8 @@ services:
       - "3309:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-    networks:
-      - traefik_network
 
 volumes:
   mysql_data:
-
-networks:
-  traefik_network:
-    external: true
+  caddy_data:
+  caddy_config:
