--- a/Caddyfile
+++ b/Caddyfile
@@ -4,6 +4,45 @@
     order php_server before file_server
 }
 
+guest-book.test {
+    # Set the document root
+    root * /app/public
+
+    # Enable compression
+    encode zstd gzip
+
+    # Enable PHP processing
+    php_server
+
+    # Serve static files
+    file_server
+
+    # Rewrite rules for CodeIgniter 4
+    @notfound {
+        not path /index.php
+        not path_regexp ^/(uploads|assets|favicon\.ico|robots\.txt)
+        not file
+    }
+    rewrite @notfound /index.php?{query}
+
+    # Set security headers
+    header {
+        X-Frame-Options "SAMEORIGIN"
+        X-Content-Type-Options "nosniff"
+        X-XSS-Protection "1; mode=block"
+        Referrer-Policy "no-referrer-when-downgrade"
+    }
+
+    # Log access
+    log {
+        output stderr
+        format json
+    }
+
+    tls /etc/app/certs/guest-book.test.pem /etc/app/certs/guest-book.test-key.pem
+}
+
+# Blok untuk :80 (default server)
 :80 {
     # Set the document root
     root * /app/public
