--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "443:443/udp" # HTTP/3
     volumes:
       - ./:/app/
+      - ./certs:/etc/app/certs
       - caddy_data:/data
       - caddy_config:/config
     # comment the following line in production, it allows to have nice human-readable logs in dev
