--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,11 @@ DB_PASSWORD = dbpassword
 DB_DRIVER = MySQLi
 DB_PORT = 3306 
 
+SMTP_HOST = host
+SMTP_PORT = 25
+SMTP_USER = user
+SMTP_PASSWORD = pass
+SMTP_CRYPTO = tls
+
 CI_ENVIRONMENT = development
 encryption.key = xxx
